--- a/Views/LoginExistent/LoginExistent.cshtml
+++ b/Views/LoginExistent/LoginExistent.cshtml
@@ -8,7 +8,7 @@
     Login Page
 </h2>
 <p>
-    @Html.ActionLink("Register", "Create")
+    @Html.ActionLink("Register", "Register", "LoginExistent")
 </p>
 
 <h3>
