--- a/Views/LoginExistent/LoginExistent.cshtml
+++ b/Views/LoginExistent/LoginExistent.cshtml
@@ -11,10 +11,13 @@
     @Html.ActionLink("Register", "Register", "LoginExistent")
 </p>
 
-<h3>
-    @Html.Label("Username", "Username ")
-    @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
-</h3>
+
+@using (Html.BeginForm())
+{
+    <h3>
+        @Html.Label("Username", "Username ")
+        @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+    </h3>
 <h3>
     @Html.Label("Password", "Password ")
     @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
@@ -25,6 +28,7 @@
         <input type="submit" value="Login" class="btn btn-default" />
     </div>
 </h2>
+}
 
 
 
