Added admin views and trying to implement delete users (with a weird exception error)

--- a/Views/LoginExistent/Admin.cshtml
+++ b/Views/LoginExistent/Admin.cshtml
@@ -7,8 +7,10 @@
 <h2>Admin</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Deschide Catalog", "CatalogAdmin", "Games")
 </p>
+
+
 <table class="table">
     <tr>
         <th>
