Added edit feature for admin, added the buy button with no implementation yet

--- a/Views/Games/Catalog.cshtml
+++ b/Views/Games/Catalog.cshtml
@@ -45,8 +45,7 @@
             @Html.DisplayFor(modelItem => item.DataLansare)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IdGame }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IdGame })
+            @Html.ActionLink("Buy", "Buy", new { id=item.IdGame }) 
         </td>
     </tr>
 }
