--- a/Views/Games/CatalogAdmin.cshtml
+++ b/Views/Games/CatalogAdmin.cshtml
@@ -8,6 +8,7 @@
 
 <p>
     @Html.ActionLink("Create New", "CreateGame", "Games")
+    @Html.ActionLink("Manage Users", "Admin", "LoginExistent")
 </p>
 <table class="table">
     <tr>
