--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,17 @@
     ViewBag.Title = "Home Page";
 }
 
+<form id="form1" runat="server">
+
+    <asp:Label1 ID="lblTitle" runat="server" Text="<%= Denumire %>"</asp:Label1>
+
+    <asp:Label2 ID="lblFName" runat="server" Text="<%= Slogan %> "</asp:Label2>
+
+</form>
+
 <div class="jumbotron">
     <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p class="lead"></p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
