Added the home page and updated the databases

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,38 +2,26 @@
     ViewBag.Title = "Home Page";
 }
 
-<form id="form1" runat="server">
-
-    <asp:Label1 ID="lblTitle" runat="server" Text="<%= Denumire %>"</asp:Label1>
-
-    <asp:Label2 ID="lblFName" runat="server" Text="<%= Slogan %> "</asp:Label2>
-
-</form>
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <h1>Game Ranger</h1>
     <p class="lead"></p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="https://www.g2a.com/" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Small Introduction</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Game Ranger is an indie developed game store app that allows you to buy the best game at the cheapest prices.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>The building process</h2>
+        <p>It was long, painful, excruciating, and for every step forward we took three steps backwards thanks to the tools we used. A true marathon of figuring out different software.</p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Conclusion</h2>
+        <p>While it was painful, it was a useful learning experience that thought us a lot about the tools we'll probably use in the future if we get jobs related to them.</p>
     </div>
 </div>
